fix action/other names

--- a/core/template/dashboard/cmd.action.other.binarySwitch.html
+++ b/core/template/dashboard/cmd.action.other.binarySwitch.html
@@ -1,7 +1,7 @@
 <div class="cmd cmd-widget cursor" data-type="action" data-subtype="other" data-template="binarySwitch" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="content-xs">
     <span class="cmdName #hide_name#">#valueName#</span>
-    <label class="binarySwitch">
+    <label class="binarySwitch tooltips" title="#name#">
       <input type="checkbox" class="binarySwitch">
       <span class="binarySwitch execute">
         <span class="binarySwitchHandle"></span>
