--- a/core/template/dashboard/cmd.action.other.tmpliconline.html
+++ b/core/template/dashboard/cmd.action.other.tmpliconline.html
@@ -1,6 +1,6 @@
 <div class="cmd cmd-widget cursor" data-type="action" data-subtype="other" data-template="tmpliconline" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="content-xs">
-    <span class="cmdName #hide_name#">#name_display#</span> <span class="execute iconCmdLine"></span>
+    <span class="cmdName #hide_name#">#valueName#</span> <span class="execute iconCmdLine tooltips" title="#name#"></span>
   </div>
   <div class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
   <template>
