info/binary condition on display_value

--- a/core/template/dashboard/cmd.info.binary.shutter.html
+++ b/core/template/dashboard/cmd.info.binary.shutter.html
@@ -28,9 +28,9 @@
           jeedom.cmd.displayDuration(_options.valueDate, cmd.querySelector('.timeCmd'), '#time#')
         }
 
-        if (_options.value == 1) {
+        if (_options.display_value == 1) {
           cmd.querySelector('.shuttergauge-value').style.height = '0%'
-        } else if (_options.value == 0) {
+        } else if (_options.display_value == 0) {
           cmd.querySelector('.shuttergauge-value').style.height = '100%'
         } else {
           cmd.querySelector('.value').innerHTML = '<span class="label label-danger">' + _options.value + '</span>'
