--- a/core/template/dashboard/cmd.info.numeric.badge.html
+++ b/core/template/dashboard/cmd.info.numeric.badge.html
@@ -37,7 +37,7 @@
       }
     })
 
-    jeedom.cmd.refreshValue([{ cmd_id: '#id#', value: '#state#', display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#' }])
+    jeedom.cmd.refreshValue([{ cmd_id: '#id#', value: '#value#', display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#' }])
 
     if (domUtils.issetWidgetOptParam('#color#', 'color')) {
       document.querySelector('.cmd[data-cmd_uid="#uid#"] .label').style.setProperty('background-color', '#color#', 'important')
