don't display content-xs as block

--- a/core/template/dashboard/cmd.action.other.binarySwitch.html
+++ b/core/template/dashboard/cmd.action.other.binarySwitch.html
@@ -44,7 +44,7 @@
         }
 
         if (cmd.querySelector('.cmdName').hasClass('hidden')) {
-          cmd.querySelector('label.binarySwitch').style.float = 'unset'
+          cmd.querySelector('.content-xs').style.justifyContent = 'center'
         }
       }
     })
