--- a/core/template/dashboard/cmd.action.slider.tmplimg.html
+++ b/core/template/dashboard/cmd.action.slider.tmplimg.html
@@ -42,7 +42,7 @@
           jeedom.cmd.displayDuration(_options.valueDate, cmd.querySelector('.timeCmd'), '#time#')
         }
 
-        if (_options.value) {
+        if (_options.value != undefined) {
           window['mySlider#id#'].set(_options.value)
           let iconCmd = cmd.querySelector('.imgCmd')
           if (_options.value > parseFloat('#minValue#')) {
