--- a/core/template/dashboard/eqLogic.html
+++ b/core/template/dashboard/eqLogic.html
@@ -12,7 +12,7 @@
     <span class="reportModeVisible">#name_display# <span class="object_name">#object_name#</span></span>
     <a href="#eqLink#" class="reportModeHidden">#name_display# <span class="object_name">#object_name#</span></a>
   </div>
-  <div class="#isVerticalAlign#">
+  <div class="cmds #isVerticalAlign#">
     #cmd#
   </div>
   #divGraphInfo#
