--- a/desktop/css/coreWidgets.css
+++ b/desktop/css/coreWidgets.css
@@ -36,8 +36,6 @@ div.eqLogic-widget div.cmds {
   justify-content: space-evenly;
   align-items: flex-start;
   width: 100%;
-  height: calc(100% - 30px);
-  padding: 5px 5px 3px 5px;
 }
 
 div.eqLogic-widget div.cmd-widget {
@@ -117,10 +115,6 @@ div.eqLogic-widget div.cmds div.break {
   flex-basis: 100%;
 }
 
-div.eqLogic_layout_table table.tableCmd {
-  width: 100%;
-}
-
 div.eqLogic_layout_table table.tableCmd td {
   vertical-align: top;
 }
@@ -136,6 +130,7 @@ div.eqLogic_layout_table table.tableCmd td.tableCenter {
 }
 
 .verticalAlign {
+  height: calc(100% - 22px);
   align-content: center;
 }
 
@@ -571,6 +566,7 @@ div.arcgauge .gaugeValue {
 div.cmd-widget.widget-compass .widget-compass-container {
   width: 80px;
   height: 80px;
+  margin: 2px;
 }
 
 div.cmd-widget.widget-compass .state {
