--- a/core/template/mobile/scenario.html
+++ b/core/template/mobile/scenario.html
@@ -30,7 +30,9 @@
     })
 
     jeedom.scenario.update['#id#'] =function(_options) {
-      $('#lastLaunch#id#').html(_options.lastLaunch)
+      if (isset(_options.name)) {
+        $('.scenario[data-scenario_id=#id#] .widget-name a').empty().append(_options.name)
+      }
       if (typeof _options.icon != 'undefined' && _options.icon != '') {
         $('.scenario[data-scenario_id=#id#] .state').empty().append(_options.icon)
       }
@@ -51,7 +53,8 @@
         $('.scenario[data-scenario_id=#id#] .state').empty().append('#icon#')
         $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=activate]').show()
       }
+      $('#lastLaunch#id#').html(_options.lastLaunch)
     }
-    jeedom.scenario.update['#id#']({isActive: '#isActive#', state: '#state#', lastLaunch: '#lastLaunch#', icon: '#icon#'})
+    jeedom.scenario.update['#id#']({isActive: '#isActive#', state: '#state#', lastLaunch: '#lastLaunch#', icon: '#icon#', name: '#name#'})
   </script>
 </div>
