--- a/desktop/css/coreWidgets.css
+++ b/desktop/css/coreWidgets.css
@@ -76,6 +76,7 @@ div.cmd-widget .value>.label {
 div.cmd-widget .content-xs {
   color: var(--txt-color);
   line-height: 16px;
+  margin: 0 5px;
 }
 
 div.cmd-widget .content,
