--- a/core/template/dashboard/eqLogic.html
+++ b/core/template/dashboard/eqLogic.html
@@ -18,14 +18,14 @@
   #divGraphInfo#
   <script>
     if ('#panelLink#' == '') {
-      document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .panelLink').remove()
+      document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .panelLink')?.remove()
     }
     if ('#refresh_id#' != '') {
       document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh').addEventListener('click', function() {
         jeedom.cmd.execute({ id: '#refresh_id#' })
       })
     } else {
-      document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh').remove()
+      document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh')?.remove()
     }
   </script>
 </div>
