mobile definitely can't use $.load() $mobile extends $ and set its own events for panels and such

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -1795,6 +1795,7 @@ div.eqLogic-widget.editingMode .panelLink {
   }
   #battery .eqLogic-widget .widget-name {
     text-align: center;
+    margin-bottom: 20px;
   }
   #battery .eqLogic-widget .widget-name > a {
     display:block;
