--- a/mobile/css/mobile.main.css
+++ b/mobile/css/mobile.main.css
@@ -87,10 +87,17 @@
     height: 18px;
     line-height: 16px;
   }
+  #bt_changeTheme {
+    position: absolute;
+    top: 7px;
+    right: 61px;
+    width: 20px;
+    font-size: 20px;
+  }
   #span_nbMessage {
     position: absolute;
     top: 10px;
-    right: 60px;
+    right: 100px;
     font-weight: 400;
     z-index: 100 !important;
     border-radius: var(--border-radius);
