Dashboard full js! removed $ apart its plugins pur js event delegation and bugfixs!

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -623,6 +623,7 @@ Desktop
   }
   legend .pull-right:not(.input-group) {
     margin-right: 15px !important;
+    margin-top: 4px;
   }
 
   :not([data-page=display])legend {
