--- a/core/template/dashboard/eqLogic.html
+++ b/core/template/dashboard/eqLogic.html
@@ -21,7 +21,7 @@
       document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .panelLink')?.remove()
     }
     if ('#refresh_id#' != '') {
-      document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh').addEventListener('click', function() {
+      document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh')?.addEventListener('click', function() {
         jeedom.cmd.execute({ id: '#refresh_id#' })
       })
     } else {
