--- a/core/template/dashboard/cmd.info.numeric.HygroThermographe.html
+++ b/core/template/dashboard/cmd.info.numeric.HygroThermographe.html
@@ -1,183 +1,80 @@
-<div class="cmd cmd-widget #history# widget-hygrothermographe" data-type="info" data-subtype="numeric" data-template="HygroThermographe" data-cmd_id="#id#" title="#collectDate#">
-  <img class="hygrothermographe-background" width="220px" height="220px" src="core/template/dashboard/cmd.info.numeric.HygroThermographe/No.ext_100_Dark.png">
-  <div class="history" data-type="temperature">
+<div class="cmd cmd-widget widget-hygrothermographe" data-type="info" data-subtype="numeric" data-template="HygroThermographe" data-cmd_id="#id#">
+  <link rel="stylesheet" href="core/template/dashboard/cmd.info.numeric.HygroThermographe/hygrothermographe.css">
+  <div class="temperature">
     <span class="intNumTemp fontDigital value"></span>
     <span class="decNumTemp fontDigital value"></span>
     <span class="uniteTemp fontDigital">°C</span>
     <div class="cmdStats #hide_history#">
-      <span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue#</span> <i class="#tendance#"></i>
+      <span title="{{Minimum}}" class="tooltips">#minHistoryValue#</span>|<span title="{{Moyenne}}" class="tooltips">#averageHistoryValue#</span>|<span title="{{Maximum}}" class="tooltips">#maxHistoryValue#</span> <i class="#tendance#"></i>
     </div>
   </div>
-  <div class="history" data-type="humidity">
+  <div class="humidity">
     <span class="intNumHumidity fontDigital value"></span>
     <span class="decNumHumidity fontDigital value"></span>
     <span class="uniteHumidity fontDigital">%</span>
-    <div class="cmdStats #hide_history#">
-      <span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue#</span> <i class="#tendance#"></i>
-    </div>
+    <div class="cmdStats"></div>
   </div>
-  <style>
-    @font-face {
-      font-family: "Digital-7";
-      src: url("core/template/dashboard/cmd.info.numeric.HygroThermographe/font/digital-7.eot?") format("eot"),
-        url("core/template/dashboard/cmd.info.numeric.HygroThermographe/font/digital-7.woff") format("woff"),
-        url("core/template/dashboard/cmd.info.numeric.HygroThermographe/font/digital-7.ttf") format("truetype"),
-        url("core/template/dashboard/cmd.info.numeric.HygroThermographe/font/digital-7.svg#Digital-7") format("svg");
-      font-weight: normal;
-      font-style: normal;
-    }
-
-    .widget-hygrothermographe span.fontDigital {
-      font-family: "Digital-7";
-      position: absolute;
-      color: #181818;
-    }
-
-    .widget-hygrothermographe span.fontDigital.value {
-      transform: scale(0.7, 1);
-      -webkit-transform: scale(0.7, 1);
-      -moz-transform: scale(0.7, 1);
-      -ms-transform: scale(0.7, 1);
-      -o-transform: scale(0.7, 1);
-    }
-
-    .widget-hygrothermographe span.intNumTemp {
-      font-size: 80px;
-      letter-spacing: 6px;
-      top: 80px;
-      right: 7px;
-    }
-
-    .widget-hygrothermographe span.decNumTemp {
-      font-size: 50px;
-      top: 90px;
-      right: -30px;
-    }
-
-    .widget-hygrothermographe span.uniteTemp {
-      font-size: 20px;
-      font-weight: bold;
-      top: 55px;
-      right: 85px;
-    }
-
-    .widget-hygrothermographe span.intNumHumidity {
-      font-size: 65px;
-      letter-spacing: 6px;
-      top: 143px;
-      right: 4px;
-    }
-
-    .widget-hygrothermographe span.decNumHumidity {
-      font-size: 35px;
-      top: 154px;
-      right: -32px;
-    }
-
-    .widget-hygrothermographe span.uniteHumidity {
-      display: none;
-      font-size: 20px;
-      font-weight: bold;
-      top: 130px;
-      right: 85px;
-    }
-
-  </style>
   <template>
-    <div>scale : 0.75 ({{Echelle du widget, entre 0 et 1}}).</div>
+    <div>scale : 0.75 ({{Echelle du widget, 0.5 minimum}}).</div>
   </template>
   <script>
-    //stats:
-    if ('#generic_type#' == 'HUMIDITY') {
-      let html = $('.cmd[data-cmd_id=#id#]').find('.cmdStats').html()
-      if (!html.includes('#')) {
-        $('.cmd[data-cmd_id=#id#]').closest('.eqLogic').find('.widget-hygrothermographe:first .history[data-type=humidity] .cmdStats').html(html)
-      } else {
-        $('.cmd[data-cmd_id=#id#]').closest('.eqLogic').find('.widget-hygrothermographe:first .history[data-type=humidity] .cmdStats').remove()
+    if ('#generic_type#' == 'TEMPERATURE') {
+      let visible = document.querySelector('.cmd[data-cmd_id="#id#"]')
+      visible.style.backgroundImage = "url('core/template/dashboard/cmd.info.numeric.HygroThermographe/No.ext_100_" + document.body.getAttribute('data-theme').split('_')[1] + ".png')"
+      visible.querySelector('.temperature').setAttribute('data-cmd_id', '#id#')
+      visible.querySelector('.temperature').classList += ' #history#'
+      if (domUtils.issetWidgetOptParam('#scale#', 'scale')) {
+        applyScale(visible, '#scale#')
+      }
+      document.body.addEventListener('changeThemeEvent', function(event) {
+        visible.style.backgroundImage = "url('core/template/dashboard/cmd.info.numeric.HygroThermographe/No.ext_100_" + event.detail.theme + ".png')"
+      })
+    } if ('#generic_type#' == 'HUMIDITY') {
+      let hidden = document.querySelector('.cmd[data-cmd_id="#id#"]')
+      hidden.unseen()
+      if (is_object(visible = hidden.parentNode.querySelector('.widget-hygrothermographe:not([data-cmd_id="#id#"])'))) {
+        visible.setAttribute('data-hidden_id', hidden.getAttribute('data-cmd_id'))
+        visible.querySelector('.humidity').setAttribute('data-cmd_id', hidden.getAttribute('data-cmd_id'))
+        visible.querySelector('.humidity').classList += ' #history#'
+        if (domUtils.issetWidgetOptParam('#scale#', 'scale')) {
+          applyScale(visible, '#scale#')
+        }
+        let html = hidden.querySelector('.cmdStats').innerHTML
+        if (!html.includes('#')) {
+          visible.querySelector('.humidity .cmdStats').innerHTML = html
+        } else {
+          visible.querySelector('.humidity .cmdStats').addClass('hidden')
+        }
       }
     }
 
     jeedom.cmd.addUpdateFunction('#id#', function(_options) {
-      let widget = $('.cmd[data-cmd_id=#id#]').closest('.eqLogic').find('.widget-hygrothermographe:first')
+      let n = parseFloat(_options.display_value).toFixed(1), _int = n.split('.')[0], _dec = n.split('.')[1]
       if ('#generic_type#' == 'TEMPERATURE') {
-        let n = parseFloat(_options.display_value).toFixed(1)
-        let _int = n.split('.')[0]
-        let _dec = n.split('.')[1]
-        widget.find('.intNumTemp').text(_int + ".").attr('title', 'Valeur du ' + _options.valueDate + ', collectée le ' + _options.collectDate)
-        widget.find('.decNumTemp').text(_dec)
-        widget.find('[data-type=temperature').attr('data-cmd_id', #id#)
-      }
-      if ('#generic_type#' == 'HUMIDITY') {
-        widget.find('.uniteHumidity').show()
-        widget.find('.intNumHumidity').text(Math.floor(_options.display_value) + ".").attr('title', '{{Date de valeur}} : ' + _options.valueDate + '<br/>{{Date de collecte}} : ' + _options.collectDate)
-        widget.find('.decNumHumidity').text(Math.round((_options.display_value - Math.floor(_options.display_value)) * 10))
-        widget.find('[data-type=humidity').attr('data-cmd_id', #id#)
+        let widget = document.querySelector('.cmd[data-cmd_id="#id#"]')
+        widget.querySelector('.temperature').setAttribute('title', '{{Date de valeur}}: ' + _options.valueDate + '<br>{{Date de collecte}}: ' + _options.collectDate)
+        widget.querySelector('.intNumTemp').innerText = _int + '.'
+        widget.querySelector('.decNumTemp').innerText = _dec
+      } else if ('#generic_type#' == 'HUMIDITY') {
+        let widget = document.querySelector('.cmd[data-hidden_id="#id#"]')
+        widget.querySelector('.humidity').setAttribute('title', '{{Date de valeur}}: ' + _options.valueDate + '<br>{{Date de collecte}}: ' + _options.collectDate)
+        widget.querySelector('.intNumHumidity').innerText = _int + '.'
+        widget.querySelector('.decNumHumidity').innerText = _dec
       }
     })
-    jeedom.cmd.refreshValue([{ cmd_id: '#id#', display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#' }])
 
-    setTimeout(function() {
-      if ($('.cmd[data-cmd_id=#id#]').closest('.eqLogic').find('.widget-hygrothermographe').length > 1) {
-        $('.cmd[data-cmd_id=#id#]').closest('.eqLogic').find('.widget-hygrothermographe:not(:first)').hide()
-      }
-    }, 100)
+    jeedom.cmd.refreshValue([{ cmd_id: '#id#', value: '#value#', display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#' }])
 
-    if (domUtils.issetWidgetOptParam('#scale#', 'scale')) {
-      let cmd = $('.cmd[data-cmd_id=#id#]').closest('.eqLogic').find('.widget-hygrothermographe').first()
-      if (cmd.attr('scaled') != '1' && '#scale#' > 0) {
-        cmd.attr('scaled', '1')
-        cmd.width(cmd.width() * '#scale#').height(cmd.height() * '#scale#')
-
-        cmd.find('.hygrothermographe-background').css({
-          'width': cmd.find('.hygrothermographe-background').width() * '#scale#',
-          'height': cmd.find('.hygrothermographe-background').height() * '#scale#'
-        })
-        cmd.find('.intNumTemp').css({
-          'font-size': (cmd.find('.intNumTemp').css('font-size').replace(/px/i, '') * '#scale#') + 'px',
-          'top': (cmd.find('.intNumTemp').css('top').replace(/px/i, '') * '#scale#') + 'px',
-          'right': (cmd.find('.intNumTemp').css('right').replace(/px/i, '') * '#scale#') + 'px'
-        })
-        cmd.find('.decNumTemp').css({
-          'font-size': cmd.find('.decNumTemp').css('font-size').replace(/px/i, '') * '#scale#' + 'px',
-          'top': cmd.find('.decNumTemp').css('top').replace(/px/i, '') * '#scale#' + 'px',
-          'right': cmd.find('.decNumTemp').css('right').replace(/px/i, '') * '#scale#' + 'px'
-        })
-        cmd.find('.uniteTemp').css({
-          'font-size': cmd.find('.uniteTemp').css('font-size').replace(/px/i, '') * '#scale#' + 'px',
-          'top': cmd.find('.uniteTemp').css('top').replace(/px/i, '') * '#scale#' + 'px',
-          'right': cmd.find('.uniteTemp').css('right').replace(/px/i, '') * '#scale#' + 'px'
-        })
-        cmd.find('.intNumHumidity').css({
-          'font-size': cmd.find('.intNumHumidity').css('font-size').replace(/px/i, '') * '#scale#' + 'px',
-          'top': cmd.find('.intNumHumidity').css('top').replace(/px/i, '') * '#scale#' + 'px',
-          'right': cmd.find('.intNumHumidity').css('right').replace(/px/i, '') * '#scale#' + 'px'
-        })
-        cmd.find('.decNumHumidity').css({
-          'font-size': cmd.find('.decNumHumidity').css('font-size').replace(/px/i, '') * '#scale#' + 'px',
-          'top': cmd.find('.decNumHumidity').css('top').replace(/px/i, '') * '#scale#' + 'px',
-          'right': cmd.find('.decNumHumidity').css('right').replace(/px/i, '') * '#scale#' + 'px'
-        })
-        cmd.find('.uniteHumidity').css({
-          'font-size': cmd.find('.uniteHumidity').css('font-size').replace(/px/i, '') * '#scale#' + 'px',
-          'top': cmd.find('.uniteHumidity').css('top').replace(/px/i, '') * '#scale#' + 'px',
-          'right': cmd.find('.uniteHumidity').css('right').replace(/px/i, '') * '#scale#' + 'px'
-        })
-      }
+    function applyScale(_widget, _scale) {
+      _widget.style.width = 200 * '#scale#' + 'px'
+      _widget.querySelector('.temperature').style.height = 110 * '#scale#' + 'px'
+      _widget.querySelector('.humidity').style.height = 90 * '#scale#' + 'px'
+      _widget.querySelectorAll('.fontDigital').forEach(function(e) {
+        let size = parseInt(window.getComputedStyle(e).fontSize)
+        let lineHeight = parseInt(window.getComputedStyle(e).lineHeight)
+        e.style.fontSize = size * '#scale#' + 'px'
+        e.style.lineHeight = lineHeight * '#scale#' + 'px'
+      })
     }
-
-    if ($('body')[0].hasAttribute('data-theme')) {
-      if ($('body').attr('data-theme').endsWith('Light')) {
-        $('.cmd[data-cmd_id=#id#]').find('.hygrothermographe-background').attr('src', 'core/template/dashboard/cmd.info.numeric.HygroThermographe/No.ext_100_Light.png')
-      }
-    }
-
-    $('body').on('changeThemeEvent', function(event, theme) {
-      let cmd = $('.cmd[data-cmd_id=#id#]')
-      if (theme == 'Light') {
-        cmd.find('.hygrothermographe-background').attr('src', 'core/template/dashboard/cmd.info.numeric.HygroThermographe/No.ext_100_Light.png')
-      } else {
-        cmd.find('.hygrothermographe-background').attr('src', 'core/template/dashboard/cmd.info.numeric.HygroThermographe/No.ext_100_Dark.png')
-      }
-    });
   </script>
 </div>
